--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
             <div class="logo-box">
                 <img class="logo-img" src="images/icons/logo.png" alt="">
                 <h1>Idea</h1>
-            </div>
+                </div>
             <ul>
                 <li><a href="">Home</a></li>
                 <li><a href="">About</a></li>
                 <li><a href="">Menu</a></li>
                 <li><a href="">Blog</a></li>
-                <div id="profile-img"><a href=""><img src="images/icons/profile.png" alt=""></a></div>
+                <div id = "profile-img"><img src="images/icons/profile.png" alt=""></div>
             </ul>
         </div>
     </header>
